# envkey

./: Cargo.toml  LICENSE  README.md
docs/: DAEMON_PLAN.md  PLAN.md  PRD.md  index.html
src/: cli.rs  error.rs  main.rs
src/commands/: add.rs  auth.rs  env.rs  key_rm.rs  lock.rs  logout.rs  mod.rs  profile_rm.rs  profiles.rs  run.rs  session.rs  status.rs
src/daemon/: mod.rs  protocol.rs
src/vault/: crypto.rs  mod.rs  store.rs
tests/: cli.rs
