[package]
name = "envkey"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "envkey"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
rpassword = "7.3"
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
zeroize = "1.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
